crates/sith_python_parser/tests/snapshots/valid_syntax@params_non_default_after_star.py.snap
---
source: crates/sith_python_parser/tests/fixtures.rs
input_file: crates/sith_python_parser/resources/inline/ok/params_non_default_after_star.py
---
## AST

```
Module(
    ModModule {
        range: 0..72,
        body: [
            FunctionDef(
                FunctionDefStmt {
                    range: 0..34,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 4..7,
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 7..28,
                        posonlyargs: [],
                        args: [
                            ParameterWithDefault {
                                range: 8..12,
                                parameter: Parameter {
                                    range: 8..9,
                                    name: Identifier {
                                        id: Name("a"),
                                        range: 8..9,
                                    },
                                    annotation: None,
                                },
                                default: Some(
                                    NumberLiteral(
                                        NumberLiteralExpr {
                                            range: 10..12,
                                            value: Int(
                                                10,
                                            ),
                                        },
                                    ),
                                ),
                            },
                        ],
                        vararg: None,
                        kwonlyargs: [
                            ParameterWithDefault {
                                range: 17..18,
                                parameter: Parameter {
                                    range: 17..18,
                                    name: Identifier {
                                        id: Name("b"),
                                        range: 17..18,
                                    },
                                    annotation: None,
                                },
                                default: None,
                            },
                            ParameterWithDefault {
                                range: 20..24,
                                parameter: Parameter {
                                    range: 20..21,
                                    name: Identifier {
                                        id: Name("c"),
                                        range: 20..21,
                                    },
                                    annotation: None,
                                },
                                default: Some(
                                    NumberLiteral(
                                        NumberLiteralExpr {
                                            range: 22..24,
                                            value: Int(
                                                11,
                                            ),
                                        },
                                    ),
                                ),
                            },
                            ParameterWithDefault {
                                range: 26..27,
                                parameter: Parameter {
                                    range: 26..27,
                                    name: Identifier {
                                        id: Name("d"),
                                        range: 26..27,
                                    },
                                    annotation: None,
                                },
                                default: None,
                            },
                        ],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            ExprStmt {
                                range: 30..33,
                                value: EllipsisLiteral(
                                    EllipsisLiteralExpr {
                                        range: 30..33,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            FunctionDef(
                FunctionDefStmt {
                    range: 34..72,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 38..41,
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 41..66,
                        posonlyargs: [],
                        args: [
                            ParameterWithDefault {
                                range: 42..46,
                                parameter: Parameter {
                                    range: 42..43,
                                    name: Identifier {
                                        id: Name("a"),
                                        range: 42..43,
                                    },
                                    annotation: None,
                                },
                                default: Some(
                                    NumberLiteral(
                                        NumberLiteralExpr {
                                            range: 44..46,
                                            value: Int(
                                                10,
                                            ),
                                        },
                                    ),
                                ),
                            },
                        ],
                        vararg: Some(
                            Parameter {
                                range: 48..53,
                                name: Identifier {
                                    id: Name("args"),
                                    range: 49..53,
                                },
                                annotation: None,
                            },
                        ),
                        kwonlyargs: [
                            ParameterWithDefault {
                                range: 55..56,
                                parameter: Parameter {
                                    range: 55..56,
                                    name: Identifier {
                                        id: Name("b"),
                                        range: 55..56,
                                    },
                                    annotation: None,
                                },
                                default: None,
                            },
                            ParameterWithDefault {
                                range: 58..62,
                                parameter: Parameter {
                                    range: 58..59,
                                    name: Identifier {
                                        id: Name("c"),
                                        range: 58..59,
                                    },
                                    annotation: None,
                                },
                                default: Some(
                                    NumberLiteral(
                                        NumberLiteralExpr {
                                            range: 60..62,
                                            value: Int(
                                                11,
                                            ),
                                        },
                                    ),
                                ),
                            },
                            ParameterWithDefault {
                                range: 64..65,
                                parameter: Parameter {
                                    range: 64..65,
                                    name: Identifier {
                                        id: Name("d"),
                                        range: 64..65,
                                    },
                                    annotation: None,
                                },
                                default: None,
                            },
                        ],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            ExprStmt {
                                range: 68..71,
                                value: EllipsisLiteral(
                                    EllipsisLiteralExpr {
                                        range: 68..71,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
