crates/sith_python_parser/tests/snapshots/valid_syntax@params_seen_keyword_only_param_after_star.py.snap
---
source: crates/sith_python_parser/tests/fixtures.rs
input_file: crates/sith_python_parser/resources/inline/ok/params_seen_keyword_only_param_after_star.py
---
## AST

```
Module(
    ModModule {
        range: 0..61,
        body: [
            FunctionDef(
                FunctionDefStmt {
                    range: 0..29,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 4..7,
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 7..23,
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [
                            ParameterWithDefault {
                                range: 11..12,
                                parameter: Parameter {
                                    range: 11..12,
                                    name: Identifier {
                                        id: Name("a"),
                                        range: 11..12,
                                    },
                                    annotation: None,
                                },
                                default: None,
                            },
                        ],
                        kwarg: Some(
                            Parameter {
                                range: 14..22,
                                name: Identifier {
                                    id: Name("kwargs"),
                                    range: 16..22,
                                },
                                annotation: None,
                            },
                        ),
                    },
                    returns: None,
                    body: [
                        Expr(
                            ExprStmt {
                                range: 25..28,
                                value: EllipsisLiteral(
                                    EllipsisLiteralExpr {
                                        range: 25..28,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            FunctionDef(
                FunctionDefStmt {
                    range: 29..61,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 33..36,
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 36..55,
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [
                            ParameterWithDefault {
                                range: 40..44,
                                parameter: Parameter {
                                    range: 40..41,
                                    name: Identifier {
                                        id: Name("a"),
                                        range: 40..41,
                                    },
                                    annotation: None,
                                },
                                default: Some(
                                    NumberLiteral(
                                        NumberLiteralExpr {
                                            range: 42..44,
                                            value: Int(
                                                10,
                                            ),
                                        },
                                    ),
                                ),
                            },
                        ],
                        kwarg: Some(
                            Parameter {
                                range: 46..54,
                                name: Identifier {
                                    id: Name("kwargs"),
                                    range: 48..54,
                                },
                                annotation: None,
                            },
                        ),
                    },
                    returns: None,
                    body: [
                        Expr(
                            ExprStmt {
                                range: 57..60,
                                value: EllipsisLiteral(
                                    EllipsisLiteralExpr {
                                        range: 57..60,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
